# idp

./: .env.example  .env.production.example  .env.staging.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  docker-compose.db-debug.yml  docker-compose.deploy.yml  docker-compose.yml
crates/api/: Cargo.toml
crates/api/src/: lib.rs
crates/api/src/presentation/: admin.rs  dto.rs  error.rs  i18n.rs  mod.rs  openapi.rs  router.rs  security_headers.rs  state.rs  tenant.rs
crates/api/src/presentation/handlers/: admin.rs  admin_audit.rs  admin_clients.rs  admin_invitations.rs  admin_members.rs  admin_permissions.rs  admin_saml_providers.rs  admin_saml_service_providers.rs  admin_signing_keys.rs  admin_system_settings.rs  admin_tenants.rs  admin_users.rs  authorize.rs  consent.rs  discovery.rs  health.rs  internal_auth.rs  introspect.rs  invitations.rs  logout.rs  mfa.rs  mod.rs  passkey.rs  register.rs  revoke.rs  token.rs  userinfo.rs
crates/api/tests/: admin_audit.rs  admin_clients.rs  admin_permissions.rs  admin_tenants.rs  internal_auth.rs  keys.rs  oidc_flow.rs  password_reset.rs  register.rs  saml_metadata.rs  saml_service_providers.rs  schema.rs  tenant_isolation.rs
crates/api/tests/support/: mod.rs
crates/contracts/: Cargo.toml  build.rs
crates/contracts/src/: admin.rs  auth.rs  csrf.rs  lib.rs  version.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs
crates/core/src/application/: account_language.rs  account_password.rs  account_profile.rs  account_tenants.rs  admin_access.rs  admin_login.rs  audit.rs  audit_query.rs  authorize.rs  change_password.rs  client_management.rs  client_status.rs  code_issuance.rs  consent.rs  email_verification.rs  introspection.rs  invitation.rs  key_service.rs  login.rs  logout.rs  mfa_login.rs  mod.rs  passkey_authentication.rs  passkey_registration.rs  password_reset.rs  permission_management.rs  portal_login.rs  register.rs  revocation.rs  saml_provider_management.rs  saml_service_provider_management.rs  system_settings.rs  tenant_management.rs  tenant_resolution.rs  token.rs  totp_registration.rs  user_lifecycle.rs  user_management.rs  userinfo.rs
crates/core/src/domain/: audit.rs  auth_session.rs  authorization_code.rs  cache.rs  client.rs  consent.rs  crypto.rs  email_verification.rs  id_generator.rs  issuer.rs  jwt.rs  mailer.rs  mod.rs  passkey_challenge.rs  password.rs  password_reset.rs  permission.rs  refresh_token.rs  repositories.rs  revoked_access_token.rs  saml_metadata.rs  saml_service_provider.rs  system_setting.rs  tenant.rs  tenant_context.rs  tenant_membership.rs  totp_secret.rs  user.rs  values.rs  webauthn_credential.rs  webauthn_port.rs
crates/core/src/infrastructure/: cache.rs  crypto.rs  db.rs  id_generator.rs  jwt.rs  mailer.rs  mod.rs  webauthn.rs
crates/core/src/infrastructure/repositories/: audit_log.rs  auth_session.rs  authorization_code.rs  cached_user_permission.rs  client.rs  consent.rs  email_verification_token.rs  mod.rs  passkey_challenge.rs  password_reset_token.rs  refresh_token.rs  revoked_access_token.rs  saml_provider.rs  saml_service_provider.rs  signing_key.rs  sso_session.rs  system_setting.rs  tenant.rs  tenant_membership.rs  tenant_provisioning.rs  totp_secret.rs  user.rs  user_permission.rs  webauthn_credential.rs
crates/web/: Cargo.toml
crates/web/assets/: app.css
crates/web/assets/react/: app.js  app.js.map
crates/web/frontend/: package-lock.json  package.json  vite.config.ts
crates/web/frontend/src/: main.tsx
crates/web/src/: admin_dto.rs  api_client.rs  config.rs  cookies.rs  csrf.rs  dto.rs  error_pages.rs  i18n.rs  lib.rs  main.rs  router.rs  state.rs  telemetry.rs  templates.rs  tenant.rs
crates/web/src/handlers/: admin_clients_console.rs  admin_console.rs  admin_invitations_console.rs  admin_members_console.rs  admin_saml_clients_console.rs  admin_saml_console.rs  admin_settings.rs  admin_signing_keys_console.rs  admin_status_console.rs  admin_tenants_console.rs  admin_users_console.rs  consent.rs  errors.rs  health.rs  invitation_accept.rs  login.rs  mfa_totp.rs  mod.rs  passkey.rs  password_change.rs  password_reset.rs  portal.rs  react_assets.rs  stylesheet.rs  user_settings.rs  vendor_assets.rs  verify_email.rs
crates/web/templates/: consent.html  error_page.html  footer.html  forgot_password.html  invitation_accept.html  login.html  message_page.html  mfa_totp_setup.html  mfa_totp_verify.html  page.html  passkey_list.html  passkey_register.html  password_change.html  password_change_forced.html  password_reset.html  password_visibility.html  portal_login.html  portal_mfa.html  react_bootstrap.html  user_settings.html  verify_email.html  version.html
crates/web/templates/console/: admin_settings.html  audit_logs.html  client_detail.html  client_form.html  client_secret.html  client_status.html  clients_list.html  home.html  invitation_created.html  invitation_form.html  layout.html  login.html  members_list.html  notice.html  password_change.html  password_reset_result.html  saml_provider_form.html  saml_providers.html  saml_service_providers.html  signing_keys.html  switch_tenant.html  tenant_created.html  tenants.html  user_created.html  user_form.html  users_permissions.html  users_search.html
docker/: nginx.conf
docs/: ARCHITECTURE.md  CHANGELOG.md  OIDC_INPUT.md  OPERATIONS.md  PERMISSIONS.md  Progress.md
migrations/: 0001_baseline.down.sql  0001_baseline.up.sql  0002_seed_master_data.up.sql  0003_system_settings.down.sql  0003_system_settings.up.sql  0004_tenant_self_registration.down.sql  0004_tenant_self_registration.up.sql  0005_password_reset_tokens.down.sql  0005_password_reset_tokens.up.sql  0005_signing_keys_es256.down.sql  0005_signing_keys_es256.up.sql  0006_email_verification_tokens.down.sql  0006_email_verification_tokens.up.sql  0007_user_language.down.sql  0007_user_language.up.sql  0008_client_logout_endpoints.down.sql  0008_client_logout_endpoints.up.sql  0009_default_admin_password.down.sql  0009_default_admin_password.up.sql  0009_revoked_access_tokens.down.sql  0009_revoked_access_tokens.up.sql  (+14 more)
(+105 files in other folders)
