[package]
name = "idp"
version = "0.1.0"
edition = "2021"
description = "OpenID Connect Identity Provider (MVP)"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "net"] }
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls",
    "mysql",
    "chrono",
    "uuid",
    "macros",
    "migrate",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
anyhow = "1"
dotenvy = "0.15"
async-trait = "0.1"
jsonwebtoken = "9"
rsa = { version = "0.9", features = ["pem"] }
aes-gcm = "0.10"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
rand = "0.8"
argon2 = "0.5"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
