[workspace]
resolver = "2"
members = ["crates/core", "crates/contracts", "crates/api", "crates/web"]

# ワークスペース共通の依存バージョン（各 crate は `workspace = true` で参照する）。
# ADR-0007（API/Web サービス分割）: P1 で core（domain/application/infrastructure）と api（presentation +
# バイナリ）へ分割。P3 で contracts（serde DTO 契約）と web（HTML 描画 + API クライアント）を追加した。
[workspace.dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "net"] }
axum = { version = "0.8", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls",
    "mysql",
    "chrono",
    "uuid",
    "macros",
    "migrate",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
anyhow = "1"
dotenvy = "0.15"
async-trait = "0.1"
jsonwebtoken = "9"
rsa = { version = "0.9", features = ["pem"] }
p256 = { version = "0.13", features = ["pkcs8", "pem"] }
aes-gcm = "0.10"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
rand = "0.8"
argon2 = "0.5"
url = "2"
percent-encoding = "2"
utoipa = { version = "5", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "9", features = ["axum", "vendored"] }
fluent = "0.17"
unic-langid = { version = "0.9", features = ["macros"] }
# web crate のサーバレンダリング用テンプレート（コンパイル時型検証・HTML 自動エスケープ）。
askama = "0.16"
# web crate の API クライアント（core/sqlx へ依存させないための HTTP 越しアクセス）。TLS は rustls。
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
# TOTP（RFC 6238）の生成・検証（MFA 自己登録）。
totp-rs = { version = "5", features = ["gen_secret", "otpauth"] }
# QR コードを SVG として生成（TOTP セットアップ画面で埋め込む）。
qrcode = "0.14"
# WebAuthn（FIDO2 Passkey）認証ライブラリ。
# danger-allow-state-serialisation: チャレンジ状態の DB 保存に必要（サーバサイドで管理するため安全）。
# conditional-ui: discoverable credentials（ユーザー名不要のパスキーログイン）のサポート。
webauthn-rs = { version = "0.5", features = ["danger-allow-state-serialisation", "conditional-ui"] }
