[package]
name = "idp-api"
version = "0.1.0"
edition = "2021"
description = "OIDC IdP API: axum presentation（protocol + JSON 管理 + 管理コンソール）とバイナリ"
license = "MIT"

[lib]
name = "idp_api"
path = "src/lib.rs"

[[bin]]
name = "idp"
path = "src/main.rs"

[dependencies]
idp-core = { path = "../core" }
idp-contracts = { path = "../contracts" }
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
dotenvy = { workspace = true }
async-trait = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }
url = { workspace = true }
percent-encoding = { workspace = true }
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }
fluent = { workspace = true }
unic-langid = { workspace = true }

[dev-dependencies]
tower = { workspace = true, features = ["util"] }
jsonwebtoken = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
